Edit animation, music

--- a/index.html
+++ b/index.html
@@ -29,27 +29,29 @@
                 Hi
                 <span id="name">Hạnh</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <p class="two" id="greetingText">I really like your name!</p>
         </div>
 
         <div class="three">
-            <p>It's your birthday!! :D</p>
+            <p>Today is your birthday!! :D</p>
         </div>
 
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                    Chúc mừng sinh nhật người con gái khiến trái tim anh rung động. Anh thầm biết ơn cuộc đời vì đã cho anh cơ hội được biết em. Được trò chuyện và tâm sự với em khiến anh cảm thấy mình như được tiếp thêm năng lượng, xua tan mọi muộn phiền trong lòng. Mong rằng chúng ta sẽ cho nhau thêm nhiều cơ hội để hiểu thêm về nhau hơn và để mối quan hệ này có thể phát triển xa hơn nữa nhé.<br>
+
+                    Chúc em sang tuổi mới luôn xinh đẹp, tự tin, hạnh phúc và gặt hái nhiều thành công trong cuộc sống.
                 </p>
                 <!-- <p class="fake-btn">Send</p> -->
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
-            <p class="idea-2">But then I stopped.</p>
+            <p class="idea-1">I was thinking about sending you a gift but unfortunately I don't know what you like yet.</p>
+            <p class="idea-2">I also thought about writing a poem or a love letter, but I'm not good at literature :v.</p>
             <p class="idea-3">
-                I realised, I wanted to do something<br>
+                But I realised, I wanted to do something<br>
                 <strong>special</strong>
                 .
             </p>
@@ -69,7 +71,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">May your day be filled with joy and all your wishes come true! ;)</h5>
             </div>
         </div>
 
