--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/hpbd_piano_1.mp3">
+        <source src="./music/piano_vesion.mp4">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
@@ -33,13 +33,13 @@
         </div>
 
         <div class="three">
-            <p>Today is your birthday!! :D</p>
+            <p>Today is your birthday!! &#129395;</p>
         </div>
 
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    Chúc mừng sinh nhật người con gái khiến trái tim anh rung động. Anh thầm biết ơn cuộc đời vì đã cho anh cơ hội được biết em. Được trò chuyện và tâm sự với em khiến anh cảm thấy mình như được tiếp thêm năng lượng, xua tan mọi muộn phiền trong lòng. Mong rằng chúng ta sẽ cho nhau thêm nhiều cơ hội để hiểu thêm về nhau hơn và để mối quan hệ này có thể phát triển xa hơn nữa nhé.<br>
+                    Chúc mừng sinh nhật em, người con gái khiến trái tim anh rung động. Anh thầm biết ơn cuộc đời vì đã cho anh cơ hội được biết em. Được trò chuyện và tâm sự với em khiến anh cảm thấy mình như được tiếp thêm năng lượng, xua tan mọi muộn phiền trong lòng. Mong rằng chúng ta sẽ cho nhau thêm nhiều cơ hội để hiểu thêm về nhau hơn và để mối quan hệ này có thể phát triển xa hơn nữa nhé.
 
                     Chúc em sang tuổi mới luôn xinh đẹp, tự tin, hạnh phúc và gặt hái nhiều thành công trong cuộc sống.
                 </p>
@@ -49,13 +49,13 @@
 
         <div class="five">
             <p class="idea-1">I was thinking about sending you a gift but unfortunately I don't know what you like yet.</p>
-            <p class="idea-2">I also thought about writing a poem or a love letter, but I'm not good at literature :v.</p>
+            <p class="idea-2">I also thought about writing a poem or a love letter, but I'm not good at literature &#128514;</p>
             <p class="idea-3">
                 But I realised, I wanted to do something<br>
                 <strong>special</strong>
                 .
             </p>
-            <p class="idea-4">Because,</p>
+            <p class="idea-4">Because</p>
             <p class="idea-5">
                 You are Special
                 <span>:)</span>
@@ -71,7 +71,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May your day be filled with joy and all your wishes come true! ;)</h5>
+                <h5 id="wishText">May your day be filled with joy and all your wishes come true &#129321;</h5>
             </div>
         </div>
 
@@ -143,11 +143,11 @@
             </svg>
         </div>
 
-        <div class="nine">
+        <!-- <div class="nine">
             <p>Okay, now come back and tell me if you liked it.</p>
             <p id="replay">Or click, if you want to watch it again.</p>
             <p class="last-smile">:)</p>
-        </div>
+        </div> -->
     </div>
 
 </body>
