--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Hi
                 <span id="name">Hạnh</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name!</p>
+            <p class="two" id="greetingText">I really like your name, because it is the beginning of happiness!</p>
         </div>
 
         <div class="three">
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    Chúc mừng sinh nhật em, người con gái khiến trái tim anh rung động. Anh thầm biết ơn cuộc đời vì đã cho anh cơ hội được biết em. Được trò chuyện và tâm sự với em khiến anh cảm thấy mình như được tiếp thêm năng lượng, xua tan mọi muộn phiền trong lòng. Mong rằng chúng ta sẽ cho nhau thêm nhiều cơ hội để hiểu thêm về nhau hơn và để mối quan hệ này có thể phát triển xa hơn nữa nhé.
+                    Chúc mừng sinh nhật em, người con gái khiến trái tim anh rung động. thật cảm ơn cuộc đời vì đã cho anh cơ hội được biết em. Trò chuyện và tâm sự với em thật vui, nó khiến anh cảm thấy mình như được tiếp thêm năng lượng trong cuộc sống. Mong rằng chúng ta sẽ cho nhau thêm nhiều cơ hội để hiểu thêm về nhau hơn và để mối quan hệ này có thể phát triển xa hơn nữa nhé.
 
                     Chúc em sang tuổi mới luôn xinh đẹp, tự tin, hạnh phúc và gặt hái nhiều thành công trong cuộc sống.
                 </p>
@@ -48,7 +48,7 @@
         </div>
 
         <div class="five">
-            <p class="idea-1">I was thinking about sending you a gift but unfortunately I don't know what you like yet.</p>
+            <p class="idea-1">I was planning to send you a gift but unfortunately I don't know your home address yet.</p>
             <p class="idea-2">I also thought about writing a poem or a love letter, but I'm not good at literature &#128514;</p>
             <p class="idea-3">
                 But I realised, I wanted to do something<br>
