--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-  <title>Happy Birthday!!! :)</title>
-  <!-- Google Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
-  <!-- My Style -->
-  <link rel="stylesheet" href="./style/main.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+    <title>Happy Birthday!!! :)</title>
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+    <!-- My Style -->
+    <link rel="stylesheet" href="./style/main.css" />
 </head>
 
 <body>
@@ -27,9 +27,9 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Hạnh</span>
+                <span id="name">Phương</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name, because it is the beginning of happiness!</p>
+            <p class="two" id="greetingText">A beautiful and elegant name, like a flower blooming in the spring sky!</p>
         </div>
 
         <div class="three">
@@ -39,17 +39,20 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    Chúc mừng sinh nhật em, người con gái khiến trái tim anh rung động. thật cảm ơn cuộc đời vì đã cho anh cơ hội được biết em. Trò chuyện và tâm sự với em thật vui, nó khiến anh cảm thấy mình như được tiếp thêm năng lượng trong cuộc sống. Mong rằng chúng ta sẽ cho nhau thêm nhiều cơ hội để hiểu thêm về nhau hơn và để mối quan hệ này có thể phát triển xa hơn nữa nhé.
-
-                    Chúc em sang tuổi mới luôn xinh đẹp, tự tin, hạnh phúc và gặt hái nhiều thành công trong cuộc sống.
+                    Chúc mừng sinh nhật Elm, Chúc em sang tuổi mới luôn xinh đẹp, tự tin, hạnh phúc và gặt hái nhiều
+                    thành công trong cuộc sống. Trò chuyện và tâm sự với em thật vui, nó khiến anh cảm thấy mình như
+                    được tiếp thêm năng lượng trong cuộc sống. Mong rằng chúng ta sẽ cho nhau thêm nhiều cơ hội để hiểu
+                    thêm về nhau hơn và để mối quan hệ này có thể phát triển xa hơn nữa nhé.
+                    Chúc em một ngày sinh nhật thật ý nghĩa và hạnh phúc bên gia đình và bạn bè. Iuuu :))
                 </p>
-                <!-- <p class="fake-btn">Send</p> -->
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">I was planning to send you a gift but unfortunately I don't know your home address yet.</p>
-            <p class="idea-2">I also thought about writing a poem or a love letter, but I'm not good at literature &#128514;</p>
+            <p class="idea-1">I really want to blow out the candles to celebrate your birthday with you but
+                unfortunately I am so far away from you.</p>
+            <p class="idea-2">I also thought about writing a poem or a love letter, but I'm not good at literature
+                &#128514;</p>
             <p class="idea-3">
                 But I realised, I wanted to do something<br>
                 <strong>special</strong>
@@ -67,7 +70,7 @@
         </div>
 
         <div class="six">
-            <img src="./img/hanh.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/hpbd_1.jpeg" alt="profile" class="profile-picture" id="imagePath" />
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
@@ -151,10 +154,10 @@
     </div>
 
 </body>
-    <!-- Greensock -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
-    <!-- Sweetalert -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script type="application/javascript" src="./script/main.js"></script>
+<!-- Greensock -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+<!-- Sweetalert -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script type="application/javascript" src="./script/main.js"></script>
 
 </html>
